<?xml version="1.0"?>
<package format="2">
	<name>robomuse</name>
	<version>1.0.2</version>
	<description>robomuse</description>

	<maintainer email="afritheos@gmail.com">Tim. Kene Ukwueze</maintainer>
    <license>TODO: License declaration</license>
	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>

	<test_depend>ament_cmake_gtest</test_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
